--- a/css/index.css
+++ b/css/index.css
@@ -333,6 +333,7 @@ h2.sectionheading{
 }
 .aboutimgholder img{
     width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center;
 }
@@ -565,7 +566,7 @@ section.product{
 
 }
 .coverimgholder{
-    background: url('/images/Architecture.webp');
+    background: url('/images/istockphoto-1337210627-612x612.jpg');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
