--- a/css/index.css
+++ b/css/index.css
@@ -309,6 +309,15 @@ nav ul li:hover::after{
     
     
 }
+.sectionheading{
+    color: #264067;
+    font-family: Montserrat;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 500;
+    text-align: center;
+    margin: 2% 0% 2% 0%;
+}
 h2.sectionheading{
     color: #264067;
     font-family: Montserrat;
