--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@ section.homescreen{
     display: grid;
     align-items: center;
     justify-items: center;
+    position: relative;
 }
 .carousel-container {
     display: flex;
@@ -339,7 +340,7 @@ h2.sectionheading{
 .aboutcontentholder{
     width: 90%;
     display: flex;
-    align-items: top;
+    align-items: center;
     justify-content: center;
 }
 .aboutimgholder{
@@ -409,8 +410,10 @@ a{
 }
 @media(max-width: 500px){
     .aboutcontentholder{
-        display: grid;
-        justify-items: center;
+        /* display: grid; */
+        /* justify-items: center; */
+        flex-direction: column;
+
     }
     .aboutimgholder{
         width: 90%;
@@ -420,17 +423,17 @@ a{
         width: 90%;
     }
     .aboutcard h3{
-        font-size: 35px;
+        font-size: 25px;
     }
 
 }
 @media (min-width: 501px) and (max-width: 864px){
     .aboutcontentholder{
-        display: grid;
-        justify-items: center;
+        
+        flex-direction: column;
     }
     .aboutimgholder{
-        width: 90%;
+        /* width: 90%; */
         height: 100%;
     }
     .aboutcard{
@@ -443,11 +446,12 @@ a{
 }
 @media (min-width: 865px) and (max-width: 1280px){
     .aboutcontentholder{
-        display: grid;
-        justify-items: center;
+        /* display: grid; */
+        /* justify-items: center; */
+        flex-direction: column;
     }
     .aboutimgholder{
-        /* width: 90%; */
+        width: 40%;
         height: 100%;
     }
     .aboutcard{
