--- a/css/index.css
+++ b/css/index.css
@@ -481,7 +481,7 @@ section.product{
     width: 100%;
     overflow: hidden;
     border-radius: 20px;
-    margin: 1%;
+    /* margin: 1%; */
     box-shadow: 0px 0px 42px 0px rgba(0, 0, 0, 0.50);
     
 }
