--- a/css/index.css
+++ b/css/index.css
@@ -590,43 +590,96 @@ section.product{
 
 
 .cover{
-    display: grid;
-    align-items: center;
-    justify-items: center;
-
+    margin-inline: auto;
+    /* width: 90%; */
+}
+.cover h1{
+    color: #264067;
+    font-size: 2.2rem;
 }
 .coverimgholder{
-    background: url('/images/istockphoto-1337210627-612x612.jpg');
+    /* background: url('/images/istockphoto-1337210627-612x612.jpg'); */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 300px;
-    display: grid;
-    align-items: center;
-    justify-items: center;
-    grid-template-rows: min-content;
+    display: flex;
+    /* justify-items: center; */
+    
 }
 .covercontent{
-    width: 90%;
-    display: grid;
-    align-items: center;
-    justify-items: center;
-    margin: 2%;
-    background: #D9F1FF;
-    grid-template-rows: minmax();
+    width: 60%;
+    margin-inline: auto;
+    padding-inline: 5%;
 }
-.covercontent p{
-    margin: 1%;
-    width: 90%;
+.cover .img-wrapper img{
+    width: 100%;
+    height: 100%;
+    /* aspect-ratio: 1/1; */
+    object-fit: cover;
+}
+.cover .img-wrapper{
+    width: 60%;
+    font-size: 0;
+}
+.why-choose-us{
+    padding-block: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.why-choose-us .item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: calc(33.3333% - 20px);
+    gap: 30px;
+    min-width: 200px;
+    padding: 20px;
+    box-sizing: border-box;
+    border: 1px solid rgb(190, 189, 189);
+    border-radius: 20px;
+}
+.why-choose-us .item img{
+    width: 60px;
+    height: 60px;
+}
+.why-choose-us .item span{
+    font-size: 1.2rem;
+    color: #264067;
+    font-weight: 500;
     text-align: center;
+    /* margin-left: 10px; */
 }
 .buttonholder{
-    width: 90%;
     display: flex;
     align-items: center;
+}
+@media (max-width:1024px) {
+  .coverimgholder{
+    flex-direction: column;
+  }
+  .cover .img-wrapper{
+    width: 100%;
+    height: 400px;
+  }
+  .covercontent{
+    width: 90%;
+    margin-inline: auto;
+  }
+  .why-choose-us{
     justify-content: center;
-    margin: 1%;
+  }   
+}
+@media (max-width:500px) {
+    .cover h1{
+        font-size: 2rem;
+    }
+    .why-choose-us .item{
+        min-width: unset;
+        width: calc(50% - 20px);
+    }
 }
 
 /* Add styling for the testimonials carousel controls and indicators */
