--- a/css/index.css
+++ b/css/index.css
@@ -630,16 +630,32 @@ section.product{
     gap: 20px;
 }
 .why-choose-us .item{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: calc(33.3333% - 20px);
-    gap: 30px;
+    width: 100%;
     min-width: 200px;
     padding: 20px;
     box-sizing: border-box;
     border: 1px solid rgb(190, 189, 189);
     border-radius: 20px;
+}
+.why-choose-heading{
+    display: flex;
+    flex-direction: row;
+    align-items: center;   
+    gap: 30px;
+}
+.why-choose-points{
+    /* margin-left: 30px; */
+    margin-top: 20px;
+}
+.why-choose-points ul{
+    padding-left: 20px;
+}
+.why-choose-points li{
+    display: list-item;
+    padding: 0;
+    font-size: 16px;
+    margin-block: 5px;
+    list-style: circle;
 }
 .why-choose-us .item img{
     width: 60px;
@@ -648,8 +664,10 @@ section.product{
 .why-choose-us .item span{
     font-size: 1.2rem;
     color: #264067;
-    font-weight: 500;
-    text-align: center;
+    font-weight: 600;
+    margin-bottom: 20px;
+    display: block;
+    
     /* margin-left: 10px; */
 }
 .buttonholder{
