--- a/css/index.css
+++ b/css/index.css
@@ -694,11 +694,99 @@ section.product{
     .cover h1{
         font-size: 1.6rem;
     }
-    .why-choose-us .item{
-        min-width: unset;
+   }
+
+/* facility / gallery section */
+.facility-section{
+    margin-block: 10%;
+    text-align: center;
+}
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    padding: 10px;
+    max-width: 1000px;
+    margin: auto;
+}
+
+.gallery-item {
+    width: calc(33.333% - 20px);
+    height: auto;
+    object-fit: cover;
+    cursor: pointer;
+    transition: transform 0.2s;
+}
+
+.gallery-item:hover {
+    transform: scale(1.1);
+}
+
+@media (max-width: 768px) {
+    .gallery-item {
         width: calc(50% - 20px);
     }
 }
+
+@media (max-width: 480px) {
+    .gallery-item {
+        width: 100%;
+    }
+}
+
+.lightbox {
+    display: none;
+    position: fixed;
+    z-index: 10;
+    padding-top: 160px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.9);
+}
+
+.lightbox-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+@media (max-width: 768px) {
+    .lightbox-content {
+        width: 90%;
+    }
+}
+
+.caption {
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: auto;
+}
+
+.close {
+    position: absolute;
+    top: 100px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* gallery section end */
+
 
 /* Add styling for the testimonials carousel controls and indicators */
 .testimonials{
