--- a/css/index.css
+++ b/css/index.css
@@ -645,7 +645,7 @@ section.product{
 }
 .why-choose-points{
     /* margin-left: 30px; */
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
 .why-choose-points ul{
     padding-left: 20px;
